# graph-convert

./: CMakeLists.txt  Makefile
expected/: increment-128.bel  increment-8192.bel
include/: cli.hpp  el2bel.hpp  mmap_helper.hpp  srcdst.hpp
input/: increment-128.el  increment-256.el  increment-512.el  increment-8192.el
scripts/: generate_incremental_output.go  generate_sample_output.go
src/: el2bel.cpp  main.cpp  vlc_trivial.cpp
test/: mmap_helper.cpp
